# agus-benchmark

./: .gitignore  README.md  pyproject.toml
data/samples/: demo_predictions.json  demo_scores.json  interactive_demo_results.json
docs/: agus_v2_counterfactuals.md  agus_v2_results.md  benchmark_design.md  failure_gallery.md  final_failure_gallery.md  final_learning_track_submission.md  final_requirements_audit.md  final_results_table.md  final_submission_checklist.md  final_submission_summary.md  final_track_positioning.md  hostile_review_defense.md  kaggle_submission_audit.md  key_claims.md  local_model_findings.md  research_note.md  results_packet.md
docs/submission/: README.md  (+5 more)
explainer/: README.md  data.json  index.html  script.js  style.css
kaggle_benchmark/: KAGGLE_UI_CHECKLIST.md  README.md  __init__.py  agus_learning_track_notebook.py  benchmark_tasks.py  packaging.py  prompts.py  structured_output.py
notebooks/: 01_task_preview.ipynb  02_scoring_demo.ipynb
src/: __init__.py  config.py
tests/: test_attention_distractors.py  test_counterfactual_branching.py  test_counterfactual_comparison.py  test_curation.py  test_experiment_ops.py  test_failure_distillation.py  test_hidden_rule.py  test_instability_analysis.py  test_interactive_metrics.py  test_interactive_runner.py  test_kaggle_benchmark_packaging.py  test_metacog_revision.py  test_metrics.py  test_model_eval.py  test_refinement_cycle.py  test_replication_analysis.py  test_robustness_analysis.py  test_search.py  test_shift_transfer.py  test_social_miniworlds.py  test_validation_bundle.py
(+52 files in other folders)
